--- a/src/components/buttons/button-mixin.scss
+++ b/src/components/buttons/button-mixin.scss
@@ -1,11 +1,13 @@
+@import '../../assets/styles/colors';
+
 .form-button {
   font-size: 0.8125rem;
   line-height: 0.8125rem;
-  color: #ffffff;
+  color: $color-white;
   max-width: 17.5rem;
   width: 100%;
   height: 2.3125rem;
-  background: #3369f3;
+  background: $color-primary;
   border-radius: 0.5rem;
-  border: 1px solid #3369f3;
+  border: 0.0625rem solid $color-border;
 }
