--- a/src/components/inputs/input-mixin.pug
+++ b/src/components/inputs/input-mixin.pug
@@ -1,5 +1,4 @@
-mixin input-mixin(name)
-    script(type='module' src='~/src/components/inputs/input-mixin.ts')
+mixin input-mixin(label_name, field_name, placeholder_name)
     div.input
-        label(class='input__label')= name
-        input(type='' name=`${name}` class=`input__field ${name}` placeholder='' required autofocus)
+        label(class=`input__label ${label_name}`)= label_name || ''
+        input(type='' name=`${field_name}` class=`input__field ${field_name}` placeholder=`${placeholder_name || ''}` required autofocus)
