--- a/src/components/inputs/input-mixin.scss
+++ b/src/components/inputs/input-mixin.scss
@@ -1,14 +1,16 @@
+@import '../../assets/styles/colors';
+
 .input {
   width: 17.5rem;
   height: 1.875rem;
   display: flex;
   flex-direction: column;
-  font-size: 13px;
-  line-height: 13px;
+  font-size: 0.8125rem;
+  line-height: 0.8125rem;
 
   &__field {
     border: 0;
-    border-bottom: 0.0625rem #3369f3 solid;
+    border-bottom: 0.0625rem $color-primary solid;
 
     &:focus {
       outline: none;
@@ -18,6 +20,16 @@
   &__label {
     font-size: 0.5625rem;
     line-height: 0.5625rem;
-    color: #999999;
+    color: $color-dark-gray;
   }
 }
+
+.message,
+.search {
+  border: 0;
+  background: $color-bg-avatar;
+}
+
+// .search::placeholder {
+//   text-align: center;
+// }
