SPRINT_1: add colors

--- a/src/views/404/404.scss
+++ b/src/views/404/404.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/colors';
+
 .error-message {
   width: 12.5rem;
   height: 12.5rem;
@@ -8,14 +10,14 @@
   &__code {
     font-size: 2.5rem;
     line-height: 2.5rem;
-    color: #1e1e1e;
+    color: $color-dark;
     margin-bottom: 0.3125rem;
   }
 
   &__text {
     font-size: 1.25rem;
     line-height: 1.25rem;
-    color: #1e1e1e;
+    color: $color-dark;
     margin-bottom: 4rem;
   }
 }
