--- a/src/components/links/link-mixin.scss
+++ b/src/components/links/link-mixin.scss
@@ -1,9 +1,18 @@
+@import '../../assets/styles/colors';
+
 .link {
   font-size: 0.6875rem;
   line-height: 0.6875rem;
 
   a {
     text-decoration: none;
-    color: #3369f3;
+    color: $color-primary;
+  }
+}
+
+.exit {
+  a {
+    text-decoration: none;
+    color: $color-red;
   }
 }
