--- a/src/modules/chat/components/sidebar/sidebar.scss
+++ b/src/modules/chat/components/sidebar/sidebar.scss
@@ -1,7 +1,10 @@
+@import '../../../../assets/styles/colors';
+@import './user-chats/user-chats';
+
 .sidebar {
   max-width: 19.375rem;
   width: 100%;
-  background: #fbfbfb;
+  background: $color-bg-sidebar;
   display: flex;
   flex-direction: column;
 
@@ -9,7 +12,7 @@
     height: 6.375rem;
     display: flex;
     flex-direction: column;
-    border-bottom: 0.0625rem #eaeaea solid;
+    border-bottom: 0.0625rem $color-border solid;
   }
 
   &__header-profile {
@@ -30,13 +33,13 @@
         font-weight: 500;
         font-size: 0.75rem;
         line-height: 0.75rem;
-        color: #999999;
+        color: $color-dark-gray;
         margin-right: 0.2rem;
       }
 
       &-arrow {
         display: inline-block;
-        border: 0.0625rem solid #999999;
+        border: 0.0625rem solid $color-dark-gray;
         border-width: 0 0.0625rem 0.0625rem 0;
         width: 0.3rem;
         height: 0.3rem;
@@ -60,12 +63,12 @@
       width: 100%;
       max-height: 2rem;
       height: 100%;
-      background: #efefef;
+      background: $color-bg-avatar;
       border-radius: 0.3125rem;
       font-weight: 500;
       font-size: 0.75rem;
       line-height: 0.75rem;
-      color: #999999;
+      color: $color-dark-gray;
     }
   }
 }
