--- a/src/views/auth/signUp/signUp.pug
+++ b/src/views/auth/signUp/signUp.pug
@@ -5,20 +5,19 @@ include ../../../components/buttons/button-mixin.pug
 include ../../../components/links/link-mixin.pug
 
 block content
-    script(type="module" src='~/src/views/auth/signUp/signUp.ts')
-    .signUp
-        .signUp__block
+    main.signUp
+        form(class='signUp__block' action='../../chat/chat.html')
             .signUp__block-title
                 span(class="sign-in__title") Регистрация
             .signUp__block-user-info-input
-                +input-mixin('Почта')
-                +input-mixin('Логин')
-                +input-mixin('Имя')
-                +input-mixin('Фамилия')
-                +input-mixin('Телефон')
-                +input-mixin('Пароль')
-                +input-mixin('Пароль (ещё раз)')
+                +input-mixin('Почта', 'email')
+                +input-mixin('Логин', 'login')
+                +input-mixin('Имя', 'first_name')
+                +input-mixin('Фамилия', 'second_name')
+                +input-mixin('Телефон', 'phone')
+                +input-mixin('Пароль', 'password')
+                +input-mixin('Пароль (ещё раз)', 'password' )
             .signUp__block-auth-btn
-                +button-mixin('Зарегистрироваться')
+                +button-mixin('submit', 'sign-up', 'Зарегистрироваться')
             .signUp__block-signUp
                 +link-mixin('../../chat/chat.pug', 'Войти')
