--- a/src/views/auth/signUp/signUp.scss
+++ b/src/views/auth/signUp/signUp.scss
@@ -1,8 +1,8 @@
+@import '../../../assets/styles/colors';
+
 .signUp {
   height: 30rem;
   width: 21.25rem;
-  left: 29.375rem;
-  top: 8.4375rem;
   border-radius: 0.75rem;
   box-shadow: 0rem 0rem 0.375rem rgba(0, 0, 0, 0.14);
 
@@ -16,7 +16,7 @@
       font-weight: 500;
       font-size: 1.25rem;
       line-height: 1.25rem;
-      color: #1e1e1e;
+      color: $color-dark;
     }
 
     &-user-info-input {
