--- a/src/modules/chat/components/sidebar/sidebar.pug
+++ b/src/modules/chat/components/sidebar/sidebar.pug
@@ -1,12 +1,11 @@
 include ./user-chats/user-chats.pug
 
-aside.sidebar
-    script(type="module" src='~/src/modules/chat/components/sidebar/sidebar.ts')
-
+section.sidebar
     header.sidebar__header
         div.sidebar__header-profile
             div.sidebar__header-profile-block
-                div.sidebar__header-profile-block-text Профиль
+                div(class='sidebar__header-profile-block-text')
+                    a(href='../profile/profile.pug' class='sidebar__header-profile-block-link')  Профиль
                 i.sidebar__header-profile-block-arrow
         div.sidebar__header-search
             div.sidebar__header-search-block
