--- a/src/components/links/link-mixin.pug
+++ b/src/components/links/link-mixin.pug
@@ -1,4 +1,3 @@
-mixin link-mixin(user_href, content)
-    script(type='module' src='~/src/components/links/link-mixin.ts')
-    div.link
+mixin link-mixin(user_href, content, is_active, mode)
+    div(class=`link ${mode}`)
         a(href=user_href )= content
