SPRINT_1: add imports

--- a/src/layouts/chat-layout/chat-layout.scss
+++ b/src/layouts/chat-layout/chat-layout.scss
@@ -1,3 +1,6 @@
+@import '../../modules/chat/components/sidebar/sidebar';
+@import '../../modules/chat/components/main-chat/main-chat';
+
 .chat-layout {
   display: flex;
   width: 100%;
