--- a/src/layouts/main-layout/main-layout.scss
+++ b/src/layouts/main-layout/main-layout.scss
@@ -1,3 +1,7 @@
+@import '../../views/404/404';
+@import '../../views/auth/signIn/signIn';
+@import '../../views/auth/signUp/signUp';
+
 .main-layout {
   height: 100vh;
   display: flex;
