--- a/src/layouts/profile-layout/profile-layout.scss
+++ b/src/layouts/profile-layout/profile-layout.scss
@@ -1,3 +1,6 @@
+@import '../../assets/styles/colors';
+@import '../../views/profile/profile';
+
 .profile-layout {
   display: flex;
   width: 100%;
@@ -10,10 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #fbfbfb;
-    border-right: 0.0625rem #eaeaea solid;
+    background: $color-bg-sidebar;
+    border-right: 0.0625rem $color-border solid;
 
-    &--btn {
+    &-btn {
       transform: rotate(-180deg);
     }
   }
