--- a/src/modules/chat/components/sidebar/user-chats/user-chats.scss
+++ b/src/modules/chat/components/sidebar/user-chats/user-chats.scss
@@ -1,8 +1,10 @@
+@import '../../../../../assets/styles/colors';
+
 .user-chats__block {
   max-height: 4.1875rem;
   height: 100%;
   min-width: 18.125rem;
-  border-bottom: 1px #eaeaea solid;
+  border-bottom: 0.0625rem $color-border solid;
 
   .user-chats__container {
     display: flex;
@@ -12,7 +14,7 @@
   }
 
   .user-chats__img {
-    background-color: #efefef;
+    background-color: $color-bg-avatar;
     width: 2.9375rem;
     height: 2.9375rem;
     border-radius: 50%;
@@ -32,7 +34,7 @@
     &-message {
       width: 12.0625rem;
       height: 1.875rem;
-      color: #999999;
+      color: $color-dark-gray;
     }
   }
 
@@ -46,18 +48,18 @@
       font-weight: 500;
       font-size: 9px;
       line-height: 13px;
-      color: #999999;
+      color: $color-dark-gray;
     }
 
     &-new-messages {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #3369f3;
+      background-color: $color-primary;
       width: 1.25rem;
       height: 1.25rem;
       border-radius: 50%;
-      color: #efefef;
+      color: $color-bg-avatar;
       font-size: 11px;
       line-height: 12px;
     }
