SPRINT_1: delete links

--- a/src/layouts/chat-layout/chat-layout.scss
+++ b/src/layouts/chat-layout/chat-layout.scss
@@ -1,3 +1,4 @@
+@import '../../assets/styles/base';
 @import '../../modules/chat/components/sidebar/sidebar';
 @import '../../modules/chat/components/main-chat/main-chat';
 
