--- a/src/layouts/main-layout/main-layout.scss
+++ b/src/layouts/main-layout/main-layout.scss
@@ -1,3 +1,4 @@
+@import '../../assets/styles/base';
 @import '../../views/404/404';
 @import '../../views/auth/signIn/signIn';
 @import '../../views/auth/signUp/signUp';
