--- a/src/layouts/profile-layout/profile-layout.scss
+++ b/src/layouts/profile-layout/profile-layout.scss
@@ -1,4 +1,5 @@
 @import '../../assets/styles/colors';
+@import '../../assets/styles/base';
 @import '../../views/profile/profile';
 
 .profile-layout {
