--- a/src/views/auth/signIn/signIn.scss
+++ b/src/views/auth/signIn/signIn.scss
@@ -39,5 +39,13 @@
     &-sign-up {
       margin-top: 0.5rem;
     }
+
+    input {
+      border: 0;
+      border-bottom: 0.0625rem $color-primary solid;
+      &:focus {
+        outline: none;
+      }
+    }
   }
 }
