--- a/src/modules/chat/components/sidebar/sidebar.scss
+++ b/src/modules/chat/components/sidebar/sidebar.scss
@@ -28,6 +28,11 @@
       justify-content: space-around;
       margin-right: 0.5rem;
 
+      a {
+        text-decoration: none;
+        color: $color-dark-gray;
+      }
+
       &-text,
       &-arrow {
         font-weight: 500;
