SPRINT_1: refactor profile-card

--- a/src/components/profile-card/profile-card-mixin.scss
+++ b/src/components/profile-card/profile-card-mixin.scss
@@ -49,7 +49,12 @@
   &__actions {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     height: 35%;
+
+    &-btn {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
