--- a/src/components/profile-card/profile-card-mixin.pug
+++ b/src/components/profile-card/profile-card-mixin.pug
@@ -1,6 +1,6 @@
 mixin profile-card-mixin()
     include ../inputs/profile-inputs/profile-input-mixin.pug
-    
+    include ../links/link-mixin.pug
     .profile-card
         .profile-card__user-info
             .profile-card__user-info-avatar <img src = "~/src/assets/icons/empty-avatar-icon.svg" alt="empty-avatar-icon"/>
@@ -8,14 +8,17 @@ mixin profile-card-mixin()
 
         .profile-card__block
             .profile-card__fields 
-                +profile-input-mixin('Почта','temp@a.ru', 'info')
-                +profile-input-mixin('Логин','ivan', 'info')
-                +profile-input-mixin('Имя','iv', 'info')
-                +profile-input-mixin('Фамилия','test', 'info')
-                +profile-input-mixin('Имя в чате','tester', 'info')
-                +profile-input-mixin('Телефон','+7 (123) 123 12 32', 'info')
+                +profile-input-mixin('Почта','temp@a.ru')
+                +profile-input-mixin('Логин','ivan')
+                +profile-input-mixin('Имя','iv')
+                +profile-input-mixin('Фамилия','test')
+                +profile-input-mixin('Имя в чате','tester')
+                +profile-input-mixin('Телефон','+7 (123) 123 12 32')
             
             .profile-card__actions
-                +profile-input-mixin('Изменить данные', '', 'update', false, true, '../../views/profile/profile-update-info/profile-update-info.pug')
-                +profile-input-mixin('Изменить пароль', '', 'update', false, true, '../../views/profile/profile-update-password/profile-update-password.pug')
-                +profile-input-mixin('Выйти', '', 'exit', false, true, '../../views/chat/chat.pug')
+                .profile-card__field
+                    +link-mixin('../../views/profile/profile-update-info/profile-update-info.pug', 'Изменить данные', 'profile__link')
+                .profile-card__field
+                    +link-mixin('../../views/profile/profile-update-password/profile-update-password.pug', 'Изменить пароль', 'profile__link')
+                .profile-card__field    
+                    +link-mixin('../../views/chat/chat.pug', 'Выйти', 'profile__link_exit')
