SPRINT_1: refactor profile-input

--- a/src/components/inputs/profile-inputs/profile-input-mixin.scss
+++ b/src/components/inputs/profile-inputs/profile-input-mixin.scss
@@ -23,12 +23,10 @@
     line-height: 13px;
     color: $color-dark-gray;
   }
-}
-
-.update {
-  color: $color-primary;
-}
-
-.exit {
-  color: $color-red;
+  input {
+    border: 0;
+    &:focus {
+      outline: none;
+    }
+  }
 }
