SPRINT_1: refactor link-mixin

--- a/src/components/links/link-mixin.scss
+++ b/src/components/links/link-mixin.scss
@@ -10,9 +10,13 @@
   }
 }
 
-.exit {
-  a {
-    text-decoration: none;
-    color: $color-red;
+.profile__link {
+  font-size: 0.8125rem;
+  &_exit {
+    font-size: 0.8125rem;
+    a {
+      text-decoration: none;
+      color: $color-red;
+    }
   }
 }
