--- a/src/components/links/link-mixin.pug
+++ b/src/components/links/link-mixin.pug
@@ -1,3 +1,3 @@
-mixin link-mixin(user_href, content, is_active, mode)
-    div(class=`link ${mode}`)
+mixin link-mixin(user_href, content, extra_class)
+    div(class=`link ${extra_class || ''}`)
         a(href=user_href )= content
