SPRINT_1: refactor profile-update

--- a/src/views/profile/profile-update-password/profile-update-password.pug
+++ b/src/views/profile/profile-update-password/profile-update-password.pug
@@ -10,8 +10,9 @@ block profile-card
 
         form(class='profile-card__block' action='../../chat/chat.html')
             .profile-card__fields 
-                +profile-input-mixin('Старый пароль','temp@a.ru','info', true,'','','password')
-                +profile-input-mixin('Новый пароль','ivan', 'info', true,'','','password')
-                +profile-input-mixin('Повтороите новый пароль','iv', 'info', true,'','','password')
+                +profile-input-mixin('Старый пароль','temp@a.ru', true, 'password')
+                +profile-input-mixin('Новый пароль','ivan', true, 'password')
+                +profile-input-mixin('Повтороите новый пароль','iv', true, 'password')
             .profile-card__actions
-                +button-mixin('','save-changes', 'Сохранить')
+                .profile-card__actions-btn
+                    +button-mixin('','save-changes', 'Сохранить')
