--- a/src/views/profile/profile-update-info/profile-update-info.pug
+++ b/src/views/profile/profile-update-info/profile-update-info.pug
@@ -10,11 +10,12 @@ block profile-card
 
         form(class='profile-card__block' action='../../chat/chat.html')
             .profile-card__fields 
-                +profile-input-mixin('Почта','temp@a.ru', 'info', true)
-                +profile-input-mixin('Логин','ivan', 'info', true)
-                +profile-input-mixin('Имя','iv', 'info', true)
-                +profile-input-mixin('Фамилия','test', 'info', true)
-                +profile-input-mixin('Имя в чате','tester', 'info', true)
-                +profile-input-mixin('Телефон','+7 (123) 123 12 32', 'info', true)
+                +profile-input-mixin('Почта','temp@a.ru', true)
+                +profile-input-mixin('Логин','ivan', true)
+                +profile-input-mixin('Имя','iv', true)
+                +profile-input-mixin('Фамилия','test', true)
+                +profile-input-mixin('Имя в чате','tester', true)
+                +profile-input-mixin('Телефон','+7 (123) 123 12 32', true)
             .profile-card__actions
-                +button-mixin('','save-changes', 'Сохранить')
+                .profile-card__actions-btn
+                    +button-mixin('','save-changes', 'Сохранить')
