SPRINT_1: refactor main-chat

--- a/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.scss
+++ b/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.scss
@@ -27,4 +27,11 @@
   &_text {
     margin-left: 1rem;
   }
+  input {
+    border: 0;
+    background: $color-bg-avatar;
+    &:focus {
+      outline: none;
+    }
+  }
 }
