SPRINT_2: add button component

--- a/src/components/inputs/input-mixin.scss
+++ b/src/components/inputs/input-mixin.scss
@@ -11,15 +11,8 @@
   &__field {
     border: 0;
 
-    // &-sign-up {
-    //   border: 0;
-    //   border-bottom: 0.0625rem $color-primary solid;
-    //   &:focus {
-    //     outline: none;
-    //   }
-    // }
-
-    &-message {
+    &-message,
+    &-search {
       border: 0;
       &:focus {
         outline: none;
@@ -32,4 +25,7 @@
     line-height: 0.5625rem;
     color: $color-dark-gray;
   }
+}
+.invalid {
+  color: $color-red;
 }
