--- a/src/components/buttons/button-mixin.pug
+++ b/src/components/buttons/button-mixin.pug
@@ -1,2 +1,1 @@
-mixin button-mixin(type, btn_class, content)
-    button(type=type || 'submit' class=`form-button ${btn_class}`)= content
+button(type=type || 'submit' class=`form-button ${btnClass}`)= content
