--- a/src/components/inputs/input-mixin.pug
+++ b/src/components/inputs/input-mixin.pug
@@ -1,4 +1,2 @@
-mixin input-mixin(label_name, field_name, placeholder_name)
-    div.input
-        label(class=`input__label ${label_name}`)= label_name || ''
-        input(type='text' name=`${field_name}` class=`input__field-${field_name}` placeholder=`${placeholder_name || ''}` required autofocus)
+label(class=`input__label ${name}`)=label || ''
+input(type=`${type}` name=`${name}` class=`input__field-${name}` placeholder=`${placeholder || ''}` required autofocus)
