--- a/src/components/inputs/profile-inputs/profile-input-mixin.pug
+++ b/src/components/inputs/profile-inputs/profile-input-mixin.pug
@@ -1,7 +1,5 @@
-mixin profile-input-mixin(name, body, is_input, type)
-    div(class=`profile-card__field`)
-            span.profile-card__field__title= name 
-            if is_input 
-                input(type=`${type}` name=name class=`input__field profile-card__field__body` value=`${body || ''}` required autofocus)
-            else
-                span.profile-card__field__body= body 
+span.profile-card__field__title= label 
+if is_input 
+    input(type=`${type}` name=name class=`input__field profile-card__field__body` value=`${body || ''}` required autofocus)
+else
+    span.profile-card__field__body= body 
