--- a/src/components/links/link-mixin.pug
+++ b/src/components/links/link-mixin.pug
@@ -1,3 +1,2 @@
-mixin link-mixin(user_href, content, extra_class)
-    div(class=`link ${extra_class || ''}`)
-        a(href=user_href )= content
+div(class=`link ${extraClass || ''}`)
+    a(href=href )= content
