SPRINT_2: update layouts

--- a/src/layouts/profile-layout/profile-layout.pug
+++ b/src/layouts/profile-layout/profile-layout.pug
@@ -1,7 +1,8 @@
 script(type='module' src='~/src/layouts/profile-layout/profile-layout.ts')
 .profile-layout
     section.profile-layout__sidebar
-        a(href='/').profile-layout__sidebar-btn  <img src = "~/src/assets/icons/send-icon.svg" alt="send-icon"/> </a>
+        a(href='/').profile-layout__sidebar-btn  
+            p Назад </a>
 
     section.profile-layout__main
         block profile-card
