--- a/src/layouts/profile-layout/profile-layout.scss
+++ b/src/layouts/profile-layout/profile-layout.scss
@@ -1,11 +1,10 @@
 @import '../../assets/styles/colors';
 @import '../../assets/styles/base';
-@import '../../views/profile/profile';
 
 .profile-layout {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   &__sidebar {
     height: 100%;
