--- a/src/modules/chat/components/main-chat/main-chat.pug
+++ b/src/modules/chat/components/main-chat/main-chat.pug
@@ -1,12 +1,8 @@
-include ./main-chat-header/main-chat-header.pug
-include ./main-chat-dialogs/main-chat-dialogs.pug
+header.main-chat__header
+    | !{header}
 
-main.main-chat
-    header.main-chat__header
-        +main-chat-header()
+main.main-chat__dialogs
+    | !{dialogs}
 
-    main.main-chat__dialogs
-        +main-chat-dialogs('Выберите чат чтобы отправить сообщение')
-
-    section.main-chat__bottom    
-        include main-chat-bottom/main-chat-bottom.pug
+section.main-chat__bottom    
+    | !{bottom}
