--- a/src/views/profile/profile.pug
+++ b/src/views/profile/profile.pug
@@ -1,5 +1,4 @@
 extends ../../layouts/profile-layout/profile-layout.pug
-include ../../components/profile-card/profile-card-mixin.pug
 
 block profile-card
-    +profile-card-mixin()    
+    | !{profileCard} 
