--- a/src/views/404/404.pug
+++ b/src/views/404/404.pug
@@ -1,8 +1,9 @@
 extends ../../layouts/main-layout/main-layout.pug
-include ../../components/links/link-mixin.pug
 
 block content
     .error-message
-        .error-message__code 404
-        .error-message__text Не туда попали
-        +link-mixin('/', 'Назад к чатам ')
+        .error-message__code=errorMessageCode
+        .error-message__text=errorMessageText
+        .error-message__link
+            | !{link}
+
