--- a/src/views/auth/signUp/signUp.pug
+++ b/src/views/auth/signUp/signUp.pug
@@ -1,23 +1,19 @@
 extends ../../../layouts/main-layout/main-layout.pug
 
-include ../../../components/inputs/input-mixin.pug
-include ../../../components/buttons/button-mixin.pug
-include ../../../components/links/link-mixin.pug
-
 block content
     main.signUp
         form(class='signUp__block' action='../../chat/chat.html')
             .signUp__block-title
-                span(class="sign-in__title") Регистрация
+                span(class="sign-in__title")=title
             .signUp__block-user-info-input
-                +input-mixin('Почта', 'email', '')
-                +input-mixin('Логин', 'login','')
-                +input-mixin('Имя', 'name','')
-                +input-mixin('Фамилия', 'second_name','')
-                +input-mixin('Телефон', 'phone','')
-                +input-mixin('Пароль', 'password','')
-                +input-mixin('Пароль (ещё раз)', 'password','' )
+                | !{email}
+                | !{login}
+                | !{firstName}
+                | !{secondName}
+                | !{phone}
+                | !{password}
+                | !{repeatPassword}
             .signUp__block-auth-btn
-                +button-mixin('submit', 'sign-up', 'Зарегистрироваться')
+                | !{button}
             .signUp__block-signUp
-                +link-mixin('../../chat/chat.pug', 'Войти')
+                | !{link}
