--- a/src/views/auth/signUp/signUp.scss
+++ b/src/views/auth/signUp/signUp.scss
@@ -1,4 +1,5 @@
 @import '../../../assets/styles/colors';
+@import '../../../layouts/main-layout/main-layout';
 
 .signUp {
   height: 30rem;
@@ -37,12 +38,23 @@
       margin-top: 0.5rem;
     }
 
-    input {
-      border: 0;
-      border-bottom: 0.0625rem $color-primary solid;
-      &:focus {
-        outline: none;
+    .input__field {
+      &-login,
+      &-password,
+      &-email,
+      &-first_name,
+      &-second_name,
+      &-phone,
+      &-repeatPassword {
+        border: 0;
+        border-bottom: 0.0625rem $color-primary solid;
+        &:focus {
+          outline: none;
+        }
       }
+    }
+    .invalid {
+      border-bottom: 0.0625rem $color-red solid;
     }
   }
 }
