SPRINT_2: add chats components

--- a/src/views/chat/chat.pug
+++ b/src/views/chat/chat.pug
@@ -1,5 +1,2 @@
-extends ../../layouts/chat-layout/chat-layout.pug
-
-block chat
-    include ../../modules/chat/components/sidebar/sidebar.pug
-    include ../../modules/chat/components/main-chat/main-chat.pug
+| !{sidebar}
+| !{mainChat}
