--- a/src/views/chat/chat.scss
+++ b/src/views/chat/chat.scss
@@ -1,9 +1,27 @@
-.chat-layout {
+@import '../../layouts/chat-layout/chat-layout.scss';
+@import '../../assets/styles/colors.scss';
+@import '../../modules/chat/components/sidebar/sidebar.scss';
+@import '../../modules/chat/components/main-chat/main-chat.scss';
+.chat {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
+}
+
+.sidebar {
+  max-width: 19.375rem;
+  width: 100%;
+  background: $color-bg-sidebar;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-chat {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
