--- a/src/modules/chat/components/sidebar/user-chats/user-chats.pug
+++ b/src/modules/chat/components/sidebar/user-chats/user-chats.pug
@@ -1,11 +1,9 @@
-mixin user-chats-mixin()
-    .user-chats__block
-        .user-chats__container
-            .user-chats__img img
-            .user-chats__content
-                .user-chats__content-name Temp
-                .user-chats__content-message teset tsets dsfgd
-            .user-chats__notify
-                .user-chats__notify-time 11:11
-                .user-chats__notify-new-messages 2
-        
+.user-chats__container
+    .user-chats__img=href
+    .user-chats__content
+        .user-chats__content-name=name
+        .user-chats__content-message=message
+    .user-chats__notify
+        .user-chats__notify-time=time
+        .user-chats__notify-new-messages=newMessageCount
+    
