SPRINT_2: update passwords

--- a/src/views/profile/profile-update-password/profile-update-password.pug
+++ b/src/views/profile/profile-update-password/profile-update-password.pug
@@ -1,18 +1,16 @@
 extends ../../../layouts/profile-layout/profile-layout.pug
-include ../../../components/inputs/profile-inputs/profile-input-mixin.pug
-include ../../../components/buttons/button-mixin.pug
+
 
 block profile-card
     .profile-card
         section.profile-card__user-info
             .profile-card__user-info-avatar <img src = "~/src/assets/icons/empty-avatar-icon.svg" alt="empty-avatar-icon"/>
-
-
         form(class='profile-card__block' action='../../chat/chat.html')
             .profile-card__fields 
-                +profile-input-mixin('Старый пароль','temp@a.ru', true, 'password')
-                +profile-input-mixin('Новый пароль','ivan', true, 'password')
-                +profile-input-mixin('Повтороите новый пароль','iv', true, 'password')
+                | !{oldPassword}
+                | !{newPassword}
+                | !{repeatPassword}
             .profile-card__actions
                 .profile-card__actions-btn
-                    +button-mixin('','save-changes', 'Сохранить')
+                    | !{button}
+
