SPRINT_2:fix stylelint

--- a/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.scss
+++ b/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.scss
@@ -1,5 +1,5 @@
 @import '../../../../../assets/styles/colors';
-
+/* stylelint-disable */
 .main-chat-bottom__block {
   display: flex;
   align-items: center;
