--- a/src/modules/chat/components/main-chat/main-chat-dialogs/main-chat-dialogs.scss
+++ b/src/modules/chat/components/main-chat/main-chat-dialogs/main-chat-dialogs.scss
@@ -1,9 +1,7 @@
 @import '../../../../../assets/styles/colors';
-
+/* stylelint-disable */
 .main-chat-dialogs__block {
   display: flex;
-  // align-items: center;
-  // justify-content: center;
   height: 100%;
   font-weight: 500;
   font-size: 0.75rem;
