--- a/src/modules/chat/components/sidebar/sidebar.scss
+++ b/src/modules/chat/components/sidebar/sidebar.scss
@@ -1,6 +1,6 @@
 @import '../../../../assets/styles/colors';
 @import './user-chats/user-chats';
-
+/* stylelint-disable */
 .sidebar {
   &__header {
     height: 6.375rem;
