--- a/src/modules/chat/components/sidebar/user-chats/user-chats.scss
+++ b/src/modules/chat/components/sidebar/user-chats/user-chats.scss
@@ -1,5 +1,5 @@
 @import '../../../../../assets/styles/colors';
-
+/* stylelint-disable */
 .user-chats__block {
   max-height: 4.1875rem;
   height: 100%;
