--- a/src/views/auth/signIn/signIn.scss
+++ b/src/views/auth/signIn/signIn.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/colors';
 @import '../../../layouts/main-layout/main-layout';
-
+/* stylelint-disable */
 .sign-in {
   height: 28.125rem;
   width: 21.25rem;
