--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -6,5 +6,5 @@ $color-gray: #c9c9cf;
 $color-white: #fff;
 $color-bg-avatar: #efefef;
 $color-dark-gray: #999;
-$color-red: #ff0000;
+$color-red: #f00;
 $color-message: #e4edfd;
