--- a/src/components/inputs/profile-inputs/profile-input-mixin.scss
+++ b/src/components/inputs/profile-inputs/profile-input-mixin.scss
@@ -1,5 +1,5 @@
 @import '../../../assets/styles/colors';
-
+/* stylelint-disable */
 .profile-card__field {
   max-width: 31.875rem;
   width: 100%;
