--- a/src/modules/chat/components/main-chat/main-chat-header/main-chat-header.scss
+++ b/src/modules/chat/components/main-chat/main-chat-header/main-chat-header.scss
@@ -1,5 +1,5 @@
 @import '../../../../../assets/styles/colors';
-
+/* stylelint-disable */
 .main-chat-header__block {
   display: flex;
   align-items: center;
