--- a/src/views/auth/signUp/signUp.scss
+++ b/src/views/auth/signUp/signUp.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/colors';
 @import '../../../layouts/main-layout/main-layout';
-
+/* stylelint-disable */
 .signUp {
   height: 30rem;
   width: 21.25rem;
