--- a/src/components/inputs/input-mixin.pug
+++ b/src/components/inputs/input-mixin.pug
@@ -1,2 +1,3 @@
 label(class=`input__label ${name}`)=label || ''
 input(type=`${type}` name=`${name}` class=`input__field-${name}` placeholder=`${placeholder || ''}` required autofocus)
+label(class=`error error-${name}`)=error || ''
