--- a/src/components/inputs/profile-inputs/profile-input-mixin.scss
+++ b/src/components/inputs/profile-inputs/profile-input-mixin.scss
@@ -33,3 +33,13 @@
 .invalid {
   color: $color-red;
 }
+
+.error {
+  font-size: 0.5rem;
+  color: $color-red;
+  &-repeatPassword,
+  &-oldPassword,
+  &-newPassword {
+    display: none;
+  }
+}
