--- a/src/assets/styles/normalize.css
+++ b/src/assets/styles/normalize.css
@@ -63,7 +63,7 @@ hr {
 
 pre {
   font-size: 1em; /* 2 */
-  font-family: monospace, monospace; /* 1 */
+  font-family: monospace; /* 1 */
 }
 
 /* Text-level semantics
@@ -105,7 +105,7 @@ code,
 kbd,
 samp {
   font-size: 1em; /* 2 */
-  font-family: monospace, monospace; /* 1 */
+  font-family: monospace; /* 1 */
 }
 
 /**
