--- a/src/assets/styles/normalize.css
+++ b/src/assets/styles/normalize.css
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -63,7 +64,7 @@ hr {
 
 pre {
   font-size: 1em; /* 2 */
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
 }
 
 /* Text-level semantics
@@ -105,7 +106,7 @@ code,
 kbd,
 samp {
   font-size: 1em; /* 2 */
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
 }
 
 /**
