SPRINT_3: create chat messanger

--- a/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.pug
+++ b/src/modules/chat/components/main-chat/main-chat-bottom/main-chat-bottom.pug
@@ -1,12 +1,13 @@
-section.main-chat-bottom__block
-    .main-chat-bottom__items
-        .main-chat-bottom__attach-btn
-        img(src=imgAttach alt='icon') 
-        | !{attachLink}
-        .main-chat-bottom__message-panel
-            .main-chat-bottom__message-panel_text 
-            | !{input}
-        .main-chat-bottom__send-btn 
-            img(src=imgSend alt='icon') 
-            | !{sendLink}
+footer.main-chat__bottom
+    section.main-chat-bottom__block
+        .main-chat-bottom__items
+            .main-chat-bottom__attach-btn
+            img(src=imgAttach alt='icon') 
+            | !{attachLink}
+            .main-chat-bottom__message-panel
+                .main-chat-bottom__message-panel_text 
+                | !{input}
+            .main-chat-bottom__send-btn 
+                img(src=imgSend alt='icon') 
+                | !{sendLink}
     
