--- a/src/modules/chat/components/main-chat/main-chat-dialogs/main-chat-dialogs.pug
+++ b/src/modules/chat/components/main-chat/main-chat-dialogs/main-chat-dialogs.pug
@@ -1,13 +1,14 @@
-div(class='empty-chat')=content
+div.main-chat-dialogs__block
+    div(class='empty-chat')=content
 
-.messages
-    .message-date 1 января
-    .message-mine
-        .message-mine-block
-            .message-text-mine orem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel obcaecati iste
-                .message-time-mine 23:59
-    .message-your
-        .message-your-block
-            .message-text-your orem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel obcaecati iste
-                .message-time-your 11:21
+    .messages
+        .message-date 1 января
+        .message-mine
+            .message-mine-block
+                .message-text-mine orem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel obcaecati iste
+                    .message-time-mine 23:59
+        .message-your
+            .message-your-block
+                .message-text-your orem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel obcaecati iste
+                    .message-time-your 11:21
 
