SPRINT_3: create views

--- a/src/views/auth/signIn/signIn.pug
+++ b/src/views/auth/signIn/signIn.pug
@@ -1,6 +1,4 @@
-extends ../../../layouts/main-layout/main-layout.pug
-
-block content
+div.auth-layout
     main.sign-in
         form(class='sign-in__block' action='../../chat/chat.html')
             .sign-in__block-title
