--- a/src/views/auth/signIn/signIn.scss
+++ b/src/views/auth/signIn/signIn.scss
@@ -1,6 +1,13 @@
 @import '../../../assets/styles/colors';
 @import '../../../layouts/main-layout/main-layout';
 /* stylelint-disable */
+.auth-layout {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .sign-in {
   height: 28.125rem;
   width: 21.25rem;
